<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/container_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context="valrae.tufts.dining.RatingFragment"
    tools:ignore="MergeRootFrame" >


    <Button
        android:id="@+id/button_high"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|top"

        android:gravity="center"
        android:background="@color/blue"
        android:text="@string/button_good"
        android:textColor="@android:color/white"

        android:onClick="onClickRating" />


    <TableRow
        android:id="@+id/counters"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <!-- Dewick -->
        <TextView
            android:id="@+id/good_stats"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"

            android:text="@string/good_stats" />

        <TextView
            android:id="@+id/good_counter"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp" />

        <!-- Carmichael -->
        <TextView
            android:id="@+id/bad_stats"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"

            android:text="@string/bad_stats" />

        <TextView
            android:id="@+id/bad_counter"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp" />
        	
    </TableRow>


    <Button
        android:id="@+id/button_low"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|bottom"

        android:gravity="center"
        android:background="@color/green"
        android:text="@string/button_bad"
        android:textColor="@android:color/white"

        android:onClick="onClickRating" />
    
</LinearLayout>